--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+/* Стили, применяемые к тегам всего документа */
+
 * {
     box-sizing: border-box;
 }
@@ -20,6 +22,8 @@ html {
     font-family: sans-serif;
 }
 
+/* Стили, применяемые к общим классам */
+
 .container {
     max-width: 1200px;
     margin-right: auto;
@@ -29,6 +33,7 @@ html {
 }
 
 .btn {
+    display: inline-block;
     padding: 15px 16px;
     font-size: 12px;
     line-height: 1;
@@ -38,6 +43,12 @@ html {
     border-radius: 4px;
     cursor: pointer;
 }
+
+.text-center {
+    text-align: center;
+}
+
+/* Headers style */
 
 .header {
     height: 110px;
@@ -49,6 +60,7 @@ html {
     height: 100%;
 }
 
+/* Стили, применяемые к меню  */
 .logo {
     margin-right: auto;
 }
@@ -64,3 +76,56 @@ html {
 .header-btn {
     margin-left: 80px;
 }
+
+/* Стили, применяемые к 
+секции с usp */
+
+.usp-container {
+    padding-top: 120px;
+    overflow: 130px;
+}
+
+.usp-contant {
+    max-width: 50%;
+}
+
+.section-usp-heading {
+    margin-bottom: 20px;
+}
+
+.section-usp-description {
+    margin-bottom: 30px;
+}
+
+.section-usp-btn-description {
+    margin-top: 10px;
+}
+
+/* Стили, применяемые к секции do */
+.section-do {
+    padding-top: 140px;
+    padding-bottom: 100px;
+}
+
+.section-description {
+    margin-top: 25px;
+}
+
+.section-do-list {
+    display: flex;
+    margin-top: 50px;
+}
+
+.section-do-item {
+    flex: 1 1 25%;
+    outline: 3px solid red;
+}
+
+.section-do-item:not(:last-child) {
+    margin-right: 30px;
+}
+
+
+/* Стили, применяемые к секции с 
+отзывами клиентов */
+.section-clients {}
